--- a/task.css
+++ b/task.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,700;1,400&display=swap');
+
 body{
     background-color:whitesmoke;
-   
+    font-family: "Roboto"
 }
 .input {
     background-size:cover;
